[project]
name = "bioinf-bloggers"
version = "0.2.0"
description = "A Planet like aggregator for bioinformatics bloggers hosted on gh-pages."
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Novica Nakov", email = "nnovica@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.pyrefly]
# check all Python files under the containing directory
project-includes = ["**/*.py*"]