[project]
name = "bioinf-bloggers"
version = "0.3.0"
description = "A Planet like aggregator for bioinformatics bloggers hosted on gh-pages."
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Novica Nakov", email = "nnovica@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]